--- a/app/main.css
+++ b/app/main.css
@@ -3,6 +3,9 @@
   transition-property: opacity;
   transition-timing-function: ease-out;
   opacity: 0;
+  -webkit-transition-duration: .7s;
+  -webkit-transition-property: opacity;
+  -webkit-transition-timing-function: ease-out;
 }
 
 .appear-enter.appear-enter-active {
